--- a/tests/test-py3.yml
+++ b/tests/test-py3.yml
@@ -6,6 +6,7 @@
       - "joe.doe@Example.com"
       - "test-wkd@example.org"
       - "me@example.com"
+      - "äëöüï@example.org"
       - "foo@example.com"
 
   tasks:
@@ -13,17 +14,16 @@
       import_role:
         name: ../../ansible-role-gpg-export
 
-    - name: Test gpg_export (armor)
+    - name: Test gpg_export (binary)
       vars:
         fixture_kwds:
           lstrip: False
           rstrip: False
-        fixture_path: "{{ '{:s}/fixtures/{:s}.asc'.format(playbook_dir,  gpg_uid) }}"
+        fixture_path: "{{ '{:s}/fixtures/{:s}.pub'.format(playbook_dir,  gpg_uid) }}"
         gpg_key_expected: "{{ lookup('file', fixture_path, **fixture_kwds) }}"
         export_kwds:
           homedir: "{{ playbook_dir }}/fixtures/gnupg"
           match: exact_email
-          armor: True
         gpg_key_actual: "{{ lookup('gpg_export', gpg_uid, **export_kwds) }}"
       loop: "{{ gpg_uids | list }}"
       loop_control:
